Details on hydrographic practice

--- a/sources/0.0.1/sections/09-hydrographic_practice.adoc
+++ b/sources/0.0.1/sections/09-hydrographic_practice.adoc
@@ -1,3 +1,8 @@
 == Hydrographic Practice
 
 This chapter talks about hydrographic practice.
+
+Hydrographic practice consists in the following:
+- Conduct a survey
+- Process the data
+- Data validation
